Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,14 @@
 \documentclass{article}
-\usepackage[utf8]{inputenc}
+\usepackage[letterpaper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
-\title{CSPC 410 Notes}
+\title{CPSC 410 Notes}
 \author{Kaitian Xie}
-\date{June 2020}
+\date{June 17, 2020}
 
 \begin{document}
 
 \maketitle
+\pagebreak
 
 \section{Introduction}
 
