--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \documentclass{article}
-\usepackage[letterpaper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage[a4paper, total={6in, 8in}]{geometry}
 
 \title{CPSC 410 Notes}
 \author{Kaitian Xie}
-\date{June 17, 2020}
+\date{June 2020}
 
 \begin{document}
 
@@ -13,6 +14,17 @@
 \tableofcontents
 \pagebreak
 
-\section{Introduction}
+\section{Program Analysis and Visualization}
+
+\subsection{Learning Objectives}
+
+\begin{itemize}
+    \item Differentiate the main types of program analysis, comparing their potential applications, strengths, and weaknesses.
+    \item Design program analyses to extract and synthesise information to aid programmers with their daily work.
+    \item Implement simple program analyses and visualizations of their results.
+    \item Create useful visualizations of programming-related data.
+    \item Justify the likely usefulness of program analyses and visualizations.
+    \item Evaluate particular program analyses/visualizations using empirical studies.
+\end{itemize}
 
 \end{document}
