Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,9 @@
     \item Create useful visualizations of programming-related data.
     \item Justify the likely usefulness of program analyses and visualizations.
     \item Evaluate particular program analyses/visualizations using empirical studies.
+    \item Categorise analyses according to the main types presented here, justifying which are necessary/useful for which tasks.
+    \item Contrast the pros and cons of raw-data vs. static program analyses, in situations where either could be applicable.
+    \item Describe the high-level implementation strategies for making large-scale static/meta-property analyses efficient.
 \end{itemize}
 
 \end{document}
