Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,30 @@
     \item Categorise analyses according to the main types presented here, justifying which are necessary/useful for which tasks.
     \item Contrast the pros and cons of raw-data vs. static program analyses, in situations where either could be applicable.
     \item Describe the high-level implementation strategies for making large-scale static/meta-property analyses efficient.
+    \item Justify which properties about code a value-agnostic static analysis can be used for (or cannot be used for).
+    \item Provide examples of key main points for value-agnostic static analyses.
+    \item Define the notion of all-executions properties, giving examples.
+    \item Explain the key ideas of the Static Program Slicing technique presented here.
+    \item Apply the Static Program Slicing technique to produce program slices for simple imperative programs.
+    \item Explain the causes of approximation for static program analyses, giving examples.
+    \item Contrast dynamic program analyses with their static counterparts, explaining the typical trade-offs.
+    \item Contrast the pros and cons of the main implementation methods for dynamic program analyses (when instrumentation is performed).
+    \item Apply the Dynamic Program Slicing technique to produce program slices for simple imperative programs.
+    \item Explain the concepts of over- and under-approximation, and their practical consequences for the analysis of correctness properties.
+    \item Derive appropriate Failure Conditions for given statements and correctness properties of interest.
+    \item Define the key ideas of the symbolic execution techniques presented here, and their meanings in the context of checking correctness properties.
+    \item Apply the symbolic execution technique to simple imperative programs.
+    \item Justify which of the standard pain points for a program analysis are addressed by symbolic execution (and which are not).
+\end{itemize}
+
+\section{Digesting and Evaluating PL/SE Research Papers}
+
+\subsection{Learning Objectives}
+
+\begin{itemize}
+    \item Explain the key things to look for when skim-reading a research paper.
+    \item Apply your knowledge of empirical evaluation techniques to critically evaluate the evidence provided in a research paper.
+    \item Create short, high-level, summaries of the main points of a research paper.
 \end{itemize}
 
 \end{document}
