Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,21 @@
         \item Judge when AST functionality should be refactored using the Visitor Pattern.
         \item Explain how the Visitor pattern simulates double-dispatch, and why double dispatch is important for the user (and reuse) of the pattern.
         \item Choose when to use appropriate extensions of the underlying design patterns.
+        \item Give examples of a variety of attributes that may be bound to identifiers.
+        \item Differentiate between attributes which are statically and dynamically bound.
+        \item Implement language support for standard variable operations.
+        \item Select appropriate representations for states used during evaluation.
+        \item Illustrate the difference that aliasing makes to observable program behaviours, as well as on the necessary complexity of states used during evaluation.
+        \item Contrast the trade-offs between static and dynamic checking, identifying the consequences of each (or neither) for users and language implementers.
+        \item Justify whether a correctness property can be checked statically/dynamically.
+        \item Implement static and dynamic checkers for particular correctness properties.
+        \item Design test cases to illustrate relevant corner cases for a correctness property.
+    \end{enumerate}
+    \item User-Driven Language Design and Empirical Studies
+    \begin{enumerate}
+        \item Compare user-centric design (particularly for teaching) with language design in general, giving example motivations for user-centric languages (Logo, Grace) and how their motivations influenced their designs specifically.
+        \item Design ethical empirical studies, appropriately identifying risks (and their importance) and strategies for mitigating risks when possible.
+        \item Evaluate empirical studies for threats to validity, judge their likely impact on a study's conclusion, and propose strategies for mitigating these when possible.
     \end{enumerate}
     \item Program Analysis and Visualization
     \begin{enumerate}
@@ -77,6 +92,8 @@
 \end{itemize}
 
 \section{Domain Specific Languages}
+
+\section{User-Driven Language Design and Empirical Studies}
 
 \section{Program Analysis and Visualization}
 
