Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -88,8 +88,8 @@
     \item Digesting and Evaluating PL/SE Research Papers
     \begin{enumerate}
         \item Explain the key things to look for when skim-reading a research paper.
-        \item Apply your knowledge of empirical evaluation techniques to critically evaluate the evidence provided in a research paper.
-        \item Create short, high-level, summaries of the main points of a research paper.
+        \item \sout{Apply your knowledge of empirical evaluation techniques to critically evaluate the evidence provided in a research paper.}
+        \item \sout{Create short, high-level, summaries of the main points of a research paper.}
     \end{enumerate}
 \end{itemize}
 
@@ -171,5 +171,66 @@
 \end{itemize}
 
 \section{Digesting and Evaluating PL/SE Research Papers}
+
+\subsection{Key Points of Skim-Reading}
+
+\begin{itemize}
+    \item Problem Statement and Motivation
+    \begin{itemize}
+        \item What is the problem/point?
+        \item Where to look
+        \begin{itemize}
+            \item Title.
+            \item Abstract.
+            \item Start of the intro.
+        \end{itemize}
+    \end{itemize}
+    \item Claimed Contributions
+    \begin{itemize}
+        \item What is the claimed value of the paper?
+        \item Where to look
+        \begin{itemize}
+            \item Abstract.
+            \item Intro.
+            \item Conclusions.
+        \end{itemize}
+    \end{itemize}
+    \item The Approach
+    \begin{itemize}
+        \item The high level solution/idea behind their solution/approach.
+        \item Where to look
+        \begin{itemize}
+            \item Motivating example
+            \item Overview figure
+            \item ``Approach''/``Methodology'' section
+            \begin{itemize}
+                \item Overview
+                \item Subsection and figure titles
+            \end{itemize}
+        \end{itemize}
+    \end{itemize}
+    \item Evidence Provided
+    \begin{itemize}
+        \item What evidence is provided to substantiate their claims.
+        \item Where to look
+        \begin{itemize}
+            \item ``Implementation''/``Experimental Evaluation'' section
+            \item Tables, graphs, and their captions
+        \end{itemize}
+    \end{itemize}
+    \item High-Level Evaluation
+    \begin{itemize}
+        \item Conclusions? Comparisons with relevant work? Limitations/weaknesses?
+        \item Where to look
+        \begin{itemize}
+            \item ``Discussion''/``Conclusions'' section
+            \item ``Future Work'' section
+        \end{itemize}
+    \end{itemize}
+    \item Research Context
+    \begin{itemize}
+        \item Citations and references.
+    \end{itemize}
+\end{itemize}
 
 \end{document}
