--- a/main.tex
+++ b/main.tex
@@ -39,9 +39,9 @@
         \item Justify the significance of specific language design principles.
         \item Give examples of considerations that API and designers should be aware of.
         \item Evaluate language features and designs against the language design principles we've discussed in the course, applying your own judgement.
-        \item Design and run user studies to evaluate design questions empirically.
-        \item Reflect on user feedback to identify potential root causes of any difficulties.
-        \item Address these root problems with appropriate redesign ideas.
+        \item \sout{Design and run user studies to evaluate design questions empirically.}
+        \item \sout{Reflect on user feedback to identify potential root causes of any difficulties.}
+        \item \sout{Address these root problems with appropriate redesign ideas.}
         \item \sout{Implement evaluation methods for an AST (or similar data structures)}.
         \item Contrast the two evaluation approaches here (AST methods vs. Visitors).
         \item Judge when AST functionality should be refactored using the Visitor Pattern.
@@ -174,6 +174,41 @@
 \end{itemize}
 
 Example: L2 (5-13)
+
+\subsection{Language Design Principles}
+
+\begin{itemize}
+    \item Efficiency
+    \begin{itemize}
+        \item How easy is it to optimize?
+        \item How fast can it be translated?
+        \item How easy is it to implement?
+        \item User experience?
+        \item Can the code be easily maintained?
+        \item Does the code run fast?
+    \end{itemize}
+    \item Regularity: degree of coherence (number of exceptions in syntax/semantics).
+    \begin{itemize}
+        \item Generality
+        \item Orthogonality: do constructs work in the same way regardless of the context?
+        \begin{itemize}
+            \item e.g. Are variable declarations different in an if-statement vs. a while loop?
+        \end{itemize}
+        \item Uniformity: how similar do constructs look within the language?
+        \item Error explanations: error messages about which rules are broken.
+    \end{itemize}
+    \item Security: safety from bad programming.
+    \item Simplicity (vague and subjective)
+    \begin{itemize}
+        \item Audience.
+        \item Purpose.
+    \end{itemize}
+    \item Extensibility: growing the language.
+    \begin{itemize}
+        \item Avoid overly specific features.
+        \item Useful abstractions to reduce duplication.
+    \end{itemize}
+\end{itemize}
 
 \subsection{Recursive Evaluation and Visitor Pattern}
 
